# ChimeraLang

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
chimera/: ast_nodes.py  claude_adapter.py  cli.py  lexer.py  parser.py  tokens.py  type_checker.py  types.py  vm.py
chimera/cir/: __init__.py  executor.py  lower.py  nodes.py  symbols.py
chimera/compiler/: __init__.py  codegen_pytorch.py  llvm_backend.py
chimera_runtime/: __init__.py  belief_tracker.py  constitution_layer.py  guard_layer.py  rag.py  roadmap_systems.py  spike_runtime.py  swarm_protocol.py  vector_store.py
docs/release/: PYPI.md
docs/roadmap/: CHIMERALANG-ML-SPEC-V2.md  CHIMERALANG-ML-SPEC.md  IMPLEMENTATION-STATUS.md
docs/superpowers/plans/: 2026-04-27-cir-belief-system.md  2026-04-27-ml-phase1-pytorch-compiler.md
docs/superpowers/specs/: 2026-04-27-cir-belief-system-design.md
examples/: adapter_demo.py  advanced_reasoning.chimera  belief_reasoning.chimera  claude_tool_use.chimera  for_loop.chimera  mnist_aligned.chimera  mnist_classifier.chimera  mnist_moe.chimera  rag_corpus.json
paper/: chimeralang.tex
spec/: SPEC.md
tests/: test_chimera_runtime.py  test_cir_executor.py  test_cir_lower.py  test_cir_nodes.py  test_codegen.py  test_compiler_backends.py  test_generated_execution.py  test_lexer_bom.py  test_llvm_backend.py  test_ml_ast.py  test_ml_parser.py  test_ml_tokens.py  test_ml_type_checker.py  test_moe.py  test_new_features.py  test_production_readiness.py  test_rag_runtime.py  test_roadmap_language_surface.py  test_roadmap_runtime_exports.py  test_roadmap_runtime_systems.py  test_roadmap_type_surface.py  test_symbols.py  test_types.py  test_vm.py
