[project]
name = "chimeralang"
version = "0.1.0"
description = "A programming language designed for AI cognition — probabilistic types, quantum consensus, directed hallucination."
requires-python = ">=3.11"
license = {text = "MIT"}

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
chimera = "chimera.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends._legacy:_Backend"

[tool.pytest.ini_options]
testpaths = ["tests"]
